front update view patients

--- a/templates/edit_patient.html
+++ b/templates/edit_patient.html
@@ -28,6 +28,9 @@
     </select>
     <br>
 
+    <label for="image">Image</label>
+        <input type="file" id="image" name="image" accept="image/*" required>
+
     <!-- Ajouter un champ caché pour stocker l'ID du patient -->
     <input type="hidden" id="patientId" name="patientId" value="{{ patient_id }}">
     <br>
