--- a/templates/view_patients.html
+++ b/templates/view_patients.html
@@ -22,7 +22,7 @@
 
     <a href="{{ url_for('add_patient') }}">Add Patient</a>
 
-    <!-- Tableau des patients invalidés-->
+    <!-- Tableau des patients à valider-->
     <h2>Patients à valider</h2>
     <table border="1">
         <thead>
@@ -48,43 +48,50 @@
                     <td>
                         <a href="{{ url_for('edit_patient', patient_id=patient.id) }}">Edit</a>
                     </td>
-                    <td><a href="{{ url_for('edit_patient', patient_id=patient.id) }}">Details</a></td>
+                    <td><a href="{{ url_for('view_image', patient_id=patient.id) }}">Details</a></td>
                     
-                    <td><a href="{{ url_for('download_pdf_predict') }}">Telecharger PDF</a></td>
+                    <td><a href="{{ url_for('download_pdf_predict', patient_id=patient.id) }}">Telecharger PDF</a></td>
                     <td><button onclick="confirmValider('{{ patient.id }}')">Valider</button></td>
                 </tr>
             {% endfor %}
         </tbody>
     </table>
 
-    <!-- Tableau des patients validés -->
-    <h2>Patients validés</h2>
-    <table border="1">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Age</th>
-                <th>Gender</th>
-                <th>Action</th>                
-                <th>View</th>
-                <th>PDF</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for patient in patients %}
-                <tr>
-                    <td>{{ patient.name }}</td>
-                    <td>{{ patient.age }}</td>
-                    <td>{{ patient.gender }}</td>
-                    <td>
-                        <a href="{{ url_for('edit_patient', patient_id=patient.id) }}">Edit</a>
-                    </td>
-                    <td><a href="{{ url_for('edit_patient', patient_id=patient.id) }}">Details</a></td>                    
-                    <td><a href="{{ url_for('download_pdf_predict') }}">Telecharger PDF</a></td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+     <!-- Tableau des patients à valider-->
+     <h2>Patients à validé</h2>
+     <table border="1">
+         <thead>
+             <tr>
+                 <th>Name</th>
+                 <th>Age</th>
+                 <th>Gender</th>
+                 <th>Prediction(%)</th>
+                 <th>Action</th>                
+                 <th>View</th>
+                 <th>PDF</th>
+                 <th>Valider</th>
+             </tr>
+         </thead>
+         <tbody>
+             {% for patient in patients %}
+                 <tr>
+                     <td>{{ patient.name }}</td>
+                     <td>{{ patient.age }}</td>
+                     <td>{{ patient.gender }}</td>                   
+                     <td>{{ patient.prediction }}</td>
+                     
+                     <td>
+                         <a href="{{ url_for('edit_patient', patient_id=patient.id) }}">Edit</a>
+                     </td>
+                     <td><a href="{{ url_for('view_image', patient_id=patient.id) }}">Details</a></td>
+                     
+                     <td><a href="{{ url_for('download_pdf_predict', patient_id=patient.id) }}">Telecharger PDF</a></td>
+                     <td><button onclick="confirmValider('{{ patient.id }}')">Valider</button></td>
+                 </tr>
+             {% endfor %}
+         </tbody>
+     </table>
+
 
     <script>
         // JavaScript pour soumettre le formulaire de recherche
