--- a/static/styles.css
+++ b/static/styles.css
@@ -9,6 +9,11 @@ h1, h2, h3 {
     color: #333;
 }
 
+h1 {
+    border-bottom: 1px solid #333;
+    padding-bottom: 20px;
+}
+
 form {
     max-width: 400px;
     margin: 20px auto;
@@ -41,6 +46,7 @@ button {
 
 button:hover {
     background-color: #45a049;
+    box-shadow: 1px 1px 3px #b8b8b8;
 }
 
 table {
@@ -58,4 +64,44 @@ th, td {
 th {
     background-color: #4caf50;
     color: white;
+}
+
+#actions-container {
+    display: flex;
+    margin: 30px 0;
+}
+
+#searchForm {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0;
+    margin: 0 auto 0 0;
+    min-width: 400px;
+}
+
+#searchForm input {
+    margin-bottom: 0;
+    max-width: 250px;
+}
+
+#cancel-btn {
+    background-color: #686868;
+}
+#cancel-btn:hover {
+    background-color: #747474;
+}
+
+.add-btn {
+    background-color: #5ead60;
+    box-shadow: inset 0 0 0 2px #9fd8a1;
+}
+.add-btn:hover {
+    box-shadow: inset 0 0 0 2px #9fd8a1;
+}
+
+.add-btn a {
+    text-decoration: none;
+    color: whitesmoke;
 }
