--- a/templates/view_patients.html
+++ b/templates/view_patients.html
@@ -48,7 +48,7 @@
                     <td>
                         <a href="{{ url_for('edit_patient', patient_id=patient.id) }}">Edit</a>
                     </td>
-                    <td><a href="{{ url_for('view_image', patient_id=patient.id) }}">Details</a></td>
+                    <td><a href="{{ url_for('details_patients', patient_id=patient.id) }}">Details</a></td>
                     
                     <td><a href="{{ url_for('download_pdf_predict', patient_id=patient.id) }}">Telecharger PDF</a></td>
                     <td><button onclick="confirmValider('{{ patient.id }}')">Valider</button></td>
@@ -83,7 +83,7 @@
                      <td>
                          <a href="{{ url_for('edit_patient', patient_id=patient.id) }}">Edit</a>
                      </td>
-                     <td><a href="{{ url_for('view_image', patient_id=patient.id) }}">Details</a></td>
+                     <td><a href="{{ url_for('details_patients', patient_id=patient.id) }}">Details</a></td>
                      
                      <td><a href="{{ url_for('download_pdf_predict', patient_id=patient.id) }}">Telecharger PDF</a></td>
                      <td><button onclick="confirmValider('{{ patient.id }}')">Valider</button></td>
