--- a/templates/view_patients.html
+++ b/templates/view_patients.html
@@ -48,10 +48,10 @@
                         <td>{{ patient.age }}</td>
                         <td>{{ patient.gender }}</td>                   
                         <td>{{ patient.prediction }}</td>
-                        <td class="icon-cell"><a href="{{ url_for('edit_patient', patient_id=patient.id) }}"><i class="fas fa-eye"></i></a></td>
+                        <td class="icon-cell"><a href="{{ url_for('details_patients', patient_id=patient.id) }}"><i class="fas fa-eye"></i></a></td>
                         <td class="icon-cell">
                             <a href="{{ url_for('edit_patient', patient_id=patient.id) }}"><i class="fas fa-edit"></i></a>
-                            <a href="{{ url_for('download_pdf_predict') }}"><i class="fas fa-download"></i></a>
+                            <a href="{{ url_for('download_pdf_predict', patient_id=patient.id) }}"><i class="fas fa-download"></i></a>
                         </td>
                     </tr>
                 {% endfor %}
@@ -82,7 +82,7 @@
                         <td>{{ patient.validation }}</td>
                         <td class="icon-cell">
                             <a href="{{ url_for('edit_patient', patient_id=patient.id) }}"><i class="fas fa-edit"></i></a>
-                            <a href="{{ url_for('download_pdf_predict') }}"><i class="fas fa-download"></i></a>
+                            <a href="{{ url_for('download_pdf_predict', patient_id=patient.id) }}"><i class="fas fa-download"></i></a>
                         </td>
                     </tr>
                 {% endfor %}
@@ -112,8 +112,8 @@
                         <td>{{ patient.prediction }}</td>
                         <td>{{ patient.validation }}</td>
                         <td class="icon-cell">
-                            <a href="{{ url_for('edit_patient', patient_id=patient.id) }}"><i class="fas fa-edit"></i></a>
-                            <a href="{{ url_for('download_pdf_predict') }}"><i class="fas fa-download"></i></a>
+                            <a href="{{ url_for('details_patients', patient_id=patient.id) }}"><i class="fas fa-edit"></i></a>
+                            <a href="{{ url_for('download_pdf_predict', patient_id=patient.id) }}"><i class="fas fa-download"></i></a>
                         </td>
                     </tr>
                 {% endfor %}
