--- a/templates/view_patients.html
+++ b/templates/view_patients.html
@@ -42,7 +42,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {% for patient in patients %}
+                    {% for patient in to_validate_patients %}
                         <tr>
                             <td>{{ patient.name }}</td>
                             <td>{{ patient.age }}</td>
@@ -73,7 +73,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {% for patient in patients %}
+                    {% for patient in corrected_patients %}
                         <tr>
                             <td>{{ patient.name }}</td>
                             <td>{{ patient.age }}</td>
@@ -104,7 +104,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {% for patient in patients %}
+                    {% for patient in validated_patients %}
                         <tr>
                             <td>{{ patient.name }}</td>
                             <td>{{ patient.age }}</td>
