--- a/templates/view_patients.html
+++ b/templates/view_patients.html
@@ -18,7 +18,7 @@
                 <button class="tablinks corrected-btn" onclick="openTable(event, 'corrected')">Corrected</button>
                 <button class="tablinks validated-btn" onclick="openTable(event, 'validated')">Validated</button>
             </div>
-            <form id="searchForm" method="GET" action="/search_patients">
+            <form id="searchForm" method="GET" action="">
                 <input type="text" id="searchInput" name="search" placeholder="Search for a patient...">
                 <button type="submit">Search</button>
                 <button type="button" id="cancel-btn">Cancel</button>
