--- a/templates/view_patients.html
+++ b/templates/view_patients.html
@@ -4,13 +4,30 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>View Patients</title>
+        <title>View Patients - Docteur(e)</title>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='styles.css') }}">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+        <style>
+            .login-btn {
+                position: absolute;
+                top: 10px;
+                right: 10px;
+                text-decoration: none;
+                color: #000;
+                padding: 5px 10px;
+                border: 1px solid #000;
+                border-radius: 5px;
+            }
+    
+            .login-btn:hover {
+                background-color: #000;
+                color: #fff;
+            }
+        </style>
     </head>
     <body>
-        <h1>View Patients</h1>
-        
+        <a href="/login" class="login-btn">Login</a>
+        <h1>View Patients - Docteur</h1>        
         <div id="actions-container">
             <!-- Tabs for different tables -->
             <div class="tabs">
@@ -23,9 +40,7 @@
                 <button type="submit">Search</button>
                 <button type="button" id="cancel-btn">Cancel</button>
             </form>
-            <button class="add-btn">
-                <a href="{{ url_for('add_patient') }}">+ Add Patient</a>
-            </button>
+            
         </div>
 
         <!-- Table for Predictions to Validate -->
